fix: set 'scrollbar-gutter' to 'auto' for better dialog modal compatibility

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,7 +12,7 @@ html, body {
  * https://developer.mozilla.org/en-US/docs/Web/CSS/scrollbar-gutter
  */
 html {
-  scrollbar-gutter: stable;
+  scrollbar-gutter: auto;
 }
 
 /*
